--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,44 +6,51 @@ body {
 #main {
   width: 100%;
 }
-
-#jokeSectionMain {
-  width: 50%;
-  text-align: center;
-  float: left;
+#form-local-storage {
+  width: 40%;
+  border: solid 1px;
+  padding: 20px 20px;
 }
 
-#jokeSection {
-  font-size: 25px;
-  animation-duration: 1.5s;
-  animation-name: fadeIn;
+/**
+Estilos copiados de W3School
+https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_modal
+**/
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-#searchField {
-  margin-top: 30px;
-  margin-left: 40px;
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 40%;
 }
 
-.errorBackGround {
-  background-color: red;
-}
-
-#repoSection {
-  width: 50%;
+/* The Close Button */
+.close {
+  color: #aaaaaa;
   float: right;
+  font-size: 28px;
+  font-weight: bold;
 }
 
-a {
-  color: #00B7FF;
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
