--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,13 +1,33 @@
 <div id="main">
-    <div id="jokeSectionMain">
-        <p hidden id="jokeSection">{{title}}</p>
-        <div>
-            <button id="boton1">Chiste aleatorio</button>
+    <div id="form-local-storage" class="container">
+        <div class="form-group row">
+            <label for="nombre-input" class="col-sm-2 col-form-label">Nombre</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="nombre-input" placeholder="Nombre">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="apellido-input" class="col-sm-2 col-form-label">Apellido</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="apellido-input" placeholder="Apellido">
+            </div>
+        </div>
+        <div class="form-group row">
+          <span class="col-sm-6" style="text-align: center"><button class="btn btn-primary" id="ver">Ver</button></span>
+          <span class="col-sm-6"><button class="btn btn-primary" id="save">Save</button></span>
         </div>
     </div>
-    <div id="repoSection">
-        <div> <input type="text" id="searchField"/></div>
-        <div id="repoList">
+
+    <!-- The Modal  Basado de https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_modal -->
+    <div id="myModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p style="text-align: center"><b>Local Storage</b></p>
+            <div id="modal-local-storage-content">
+            </div>
         </div>
+
     </div>
 </div>
