--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,8 +12,17 @@ body {
   padding: 20px 20px;
 }
 
+#modal-local-storage-content {
+  margin-top: 20px;
+}
+
+.align-center {
+  text-align: center;
+}
+
+
 /**
-Estilos copiados de W3School
+Estilos copiados de W3School bajo licencia del MIT
 https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_modal
 **/
 /* The Modal (background) */
