--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,8 +13,9 @@
             </div>
         </div>
         <div class="form-group row">
-          <span class="col-sm-6" style="text-align: center"><button class="btn btn-primary" id="ver">Ver</button></span>
-          <span class="col-sm-6"><button class="btn btn-primary" id="save">Save</button></span>
+          <span class="col-sm-4" style="text-align: center"><button class="btn btn-primary" id="ver">Ver</button></span>
+          <span class="col-sm-4"><button class="btn btn-primary" id="save">Save</button></span>
+          <span class="col-sm-4"><button class="btn btn-primary" id="delete">delete</button></span>
         </div>
     </div>
 
