--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,5 +11,7 @@
   <body>
     {{{body}}}
   </body>
+
+  <script type="text/javascript" src="/js/canvas.js"></script>
   <script type="text/javascript" src="/js/main.js"></script>
 </html>
